<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <include android:id="@+id/app_bar" layout="@layout/toolbar" />

    <ScrollView
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_contact_photo"/>

            <TextView
                android:id="@+id/contactLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/contaxSecondaryTextColor"
                android:layout_marginBottom="50dp"
                android:text="@string/newContact"/>

            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="match_parent"
                android:hint="@string/firstNameFieldHint"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:hint="@string/lastNameFieldHint"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/dateOfBirthField"
                android:layout_width="match_parent"
                android:inputType="none"
                android:hint="@string/dateOfBirthFieldHint"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/zipcodeField"
                android:layout_width="match_parent"
                android:maxLength="5"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/zipcodeFieldHint"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/deleteContact"
                android:textColor="@color/contaxAlertButtonColor"
                android:shadowColor="@null"
                android:textSize="14sp"
                android:background="@null"/>

        </LinearLayout>


    </ScrollView>
</RelativeLayout>